test/ingress/customer1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-customer1
  labels:
    category: customer
spec:
  containers:
  - name: customer1
    image: kubetm/customer
---
apiVersion: v1
kind: Service
metadata:
  name: svc-customer1
spec:
  selector:
    category: customer
  ports:
  - port: 8080
