test/ingress/customer2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-customer2
  labels:
    category: customer
spec:
  containers:
  - name: customer2
    image: stonehye/customer2
---
apiVersion: v1
kind: Service
metadata:
  name: svc-customer2
spec:
  selector:
    category: customer
  ports:
  - port: 8080
