test/ingress/ingress1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: service-loadbalancing1
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "test: test1";
spec:
  rules:
  - http:
      paths:
        - path: /customer
          backend:
            serviceName: svc-customer1
            servicePort: 8080
        # - path: /order
        #   backend:
        #     serviceName: svc-order1
        #     servicePort: 8080
