test/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: service-loadbalancing2
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "test: test2";
spec:
  rules:
  - http:
      paths:
        # - path: /customer
        #   backend:
        #     serviceName: svc-customer2
        #     servicePort: 8080
        # - path: /order
        #   backend:
        #     serviceName: svc-order2
        #     servicePort: 8080
        - path: /customer
          backend:
            serviceName: svc-order1
            servicePort: 8080
